--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
-  background-color: black;
+  background-color: rgba(10, 10, 21, 0.999);
 }
 
 .container {
-  background-image: url('./img/showcase-bg.jpg');
+  background-image: url("./img/showcase-bg.jpg");
   padding: 20px;
 }
 
-.container h3 {
+h3 {
   text-align: center;
   color: white;
 }
@@ -62,6 +62,30 @@ body {
 .swiper-button-next,
 .swiper-button-prev {
   opacity: 0.5;
+}
+
+.movie-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin: 20px;
+}
+
+.movie-card {
+  max-width: 300px;
+  background-color: rgba(5, 5, 18, 0.999);
+  padding: 10px;
+  border-radius: 6px;
+}
+
+.movie-name {
+  color: white;
+  font-weight: bold;
+}
+
+.movie-release {
+  color: white;
+  margin-top: 10px;
 }
 
 /* Responsive breakpoints */
