--- a/styles.css
+++ b/styles.css
@@ -88,4 +88,9 @@ h3 {
   .container {
     width: 100%;
   }
+
+  .movie-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
