--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgba(10, 10, 21, 0.999);
+  background-color: #272343;
 }
 
 .container {
@@ -73,7 +73,7 @@ h3 {
 
 .main-card {
   max-width: 300px;
-  background-color: rgba(5, 5, 18, 0.999);
+  background-color: #163172;
   padding: 10px;
   border-radius: 6px;
 }
@@ -83,7 +83,9 @@ h3 {
   font-weight: bold;
 }
 
-.release_date {
+.release_date,
+.overview {
+  padding: 10px 0;
   color: white;
 }
 
