--- a/details.css
+++ b/details.css
@@ -8,6 +8,26 @@ h2 {
   text-align: center;
 }
 
+#btn-back,
+.btn-movie-home-page {
+  padding: 10px 20px;
+  border-radius: 6px;
+  border: 1px solid grey;
+  margin-left: 20px;
+  color: black;
+}
+
+#btn-back:hover,
+.btn-movie-home-page:hover {
+  border: 1px solid green;
+  color: whitesmoke;
+}
+
+.btn-movie-home-page {
+  margin-top: 30px;
+  color: black;
+}
+
 .details-container {
   display: flex;
   justify-content: center;
@@ -16,5 +36,25 @@ h2 {
 }
 
 .details-list {
-  margin: 10px;
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.details-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  max-width: 400px;
+}
+
+.genres {
+  color: whitesmoke;
+}
+
+@media (max-width: 768px) {
+  .details-list {
+    flex-direction: column;
+  }
 }
