--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,24 @@ body {
   background-color: #272343;
 }
 
+h3 {
+  text-align: center;
+  color: white;
+}
+
+.alert {
+  background: red;
+  text-align: center;
+  padding: 10px 30px;
+  color: whitesmoke;
+  border-radius: 6px;
+  margin-bottom: 20px;
+}
+
 .container {
   background-image: url("./img/showcase-bg.jpg");
   padding: 20px;
   margin-top: 20px;
-}
-
-h3 {
-  text-align: center;
-  color: white;
 }
 
 .header {
